--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/crear_cliente.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/crear_cliente.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="335.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectofenix.escritorio.controlador.EdicionClienteControlador">
+<AnchorPane prefHeight="452.0" prefWidth="427.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectofenix.escritorio.controlador.EdicionClienteControlador">
 	<children>
-		<GridPane layoutX="14.0" layoutY="24.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="35.0">
+		<GridPane layoutX="5.0" layoutY="87.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="87.0">
 			<columnConstraints>
 				<ColumnConstraints hgrow="SOMETIMES" maxWidth="180.0" minWidth="10.0" prefWidth="124.0" />
 				<ColumnConstraints hgrow="SOMETIMES" maxWidth="246.0" minWidth="10.0" prefWidth="246.0" />
@@ -25,6 +25,8 @@
 				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 			</rowConstraints>
@@ -45,14 +47,18 @@
             <ComboBox fx:id="cmpGenero" prefHeight="25.0" prefWidth="173.0" promptText="&lt;Seleccione&gt;" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <Label text="Teléfono:" GridPane.rowIndex="7" />
             <TextField fx:id="cmpTelefono" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <Label text="Número cuenta" GridPane.rowIndex="9" />
+            <TextField fx:id="cmpNoCuenta" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <Label text="Dirección:" GridPane.rowIndex="8" />
+            <TextField fx:id="cmpDireccion" GridPane.columnIndex="1" GridPane.rowIndex="8" />
 			</children>
 		</GridPane>
-		<Label layoutX="5.0" layoutY="6.0" text="Persona" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
-			<font>
-				<Font name="Arial Bold" size="14.0" />
-			</font>
-		</Label>
-		<Button layoutX="211.0" layoutY="288.0" mnemonicParsing="false" onAction="#registrarPersona" text="Aceptar" AnchorPane.rightAnchor="112.0" />
-		<Button layoutX="296.0" layoutY="288.0" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" AnchorPane.rightAnchor="22.0" />
+		<Button layoutX="266.0" layoutY="406.0" mnemonicParsing="false" onAction="#registrarCliente" text="Aceptar" AnchorPane.rightAnchor="104.0" />
+		<Button layoutX="351.0" layoutY="406.0" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" AnchorPane.rightAnchor="14.0" />
+      <Label layoutX="5.0" layoutY="29.0" text="Por favor Ingrese los datos del cliente">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
 	</children>
 </AnchorPane>
