--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/inicio.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/inicio.fxml
@@ -5,14 +5,14 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectofenix.escritorio.controlador.InicioControlador">
    <top>
-      <MenuBar BorderPane.alignment="CENTER">
+      <MenuBar fx:id="menuBar" BorderPane.alignment="CENTER">
         <menus>
-          <Menu mnemonicParsing="false" text="File">
+          <Menu mnemonicParsing="false" text="Gestionar">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+              <MenuItem mnemonicParsing="false" onAction="#cargarGestionarCliente" text="Cliente" />
+                  <MenuItem mnemonicParsing="false" onAction="#cerrarAplicacion" text="Salir" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
