--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_cliente.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_cliente.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectofenix.escritorio.controlador.ClienteControlador">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectofenix.escritorio.controlador.ClienteControlador">
 	<children>
 		<SplitPane dividerPositions="0.29797979797979796" layoutX="6.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 			<items>
@@ -47,6 +47,10 @@
 								<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 								<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 								<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 							</rowConstraints>
 							<children>
 								<Label text="Cedula:" />
@@ -61,6 +65,14 @@
 								<Label fx:id="txtEmail" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 								<Label fx:id="txtClave" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 								<Label fx:id="txtFechaNacimiento" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label text="Genero:" GridPane.rowIndex="6" />
+                        <Label fx:id="txtGenero" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <Label text="Teléfono:" GridPane.rowIndex="7" />
+                        <Label fx:id="txtTelefono" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                        <Label text="Dirección:" GridPane.rowIndex="8" />
+                        <Label fx:id="txtDireccion" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                        <Label text="Número de cuenta:" GridPane.rowIndex="9" />
+                        <Label fx:id="txtNoCuenta" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="9" />
 							</children>
 						</GridPane>
 						<Button layoutX="350.0" layoutY="357.0" mnemonicParsing="false" text="Editar" AnchorPane.bottomAnchor="14.0" />
