--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/inicio.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/inicio.fxml
@@ -5,26 +5,20 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0"
-	xmlns="http://javafx.com/javafx/8.0.171"
-	xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="proyectofenix.escritorio.controlador.InicioControlador">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectofenix.escritorio.controlador.InicioControlador">
 	<top>
 		<MenuBar fx:id="menuBar" BorderPane.alignment="CENTER">
 			<menus>
 				<Menu mnemonicParsing="false" text="Gestionar">
 					<items>
-						<MenuItem mnemonicParsing="false"
-							onAction="#cargarGestionarCliente" text="Cliente" />
-						<MenuItem mnemonicParsing="false"
-							onAction="#cargarGestionarEmpleado" text="Empleado" />
-						<MenuItem mnemonicParsing="false"
-							onAction="#cerrarAplicacion" text="Salir" />
+						<MenuItem mnemonicParsing="false" onAction="#cargarGestionarCliente" text="Cliente" />
+						<MenuItem mnemonicParsing="false" onAction="#cargarGestionarEmpleado" text="Empleado" />
+						<MenuItem mnemonicParsing="false" onAction="#cerrarAplicacion" text="Salir" />
 					</items>
 				</Menu>
-				<Menu mnemonicParsing="false" text="Edit">
+				<Menu mnemonicParsing="false" text="Prestamos">
 					<items>
-						<MenuItem mnemonicParsing="false" text="Delete" />
+						<MenuItem mnemonicParsing="false" onAction="#cargarListarPrestamos" text="Lista Prestamos" />
 					</items>
 				</Menu>
 				<Menu mnemonicParsing="false" text="Help">
