--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/crear_editar_prestamo.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/crear_editar_prestamo.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="474.0" prefWidth="427.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectofenix.escritorio.controlador.CrearEditarPrestamoControlador">
+<AnchorPane onMouseClicked="#cargarDatos" prefHeight="474.0" prefWidth="427.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectofenix.escritorio.controlador.CrearEditarPrestamoControlador">
 	<children>
 		<GridPane layoutX="5.0" layoutY="48.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="48.0">
 			<columnConstraints>
@@ -34,8 +34,8 @@
 				<Label text="Numero Cuotas:" GridPane.rowIndex="4" />
 				<Label text="Tipo:" GridPane.rowIndex="5" />
 				<DatePicker fx:id="cmpFechaInicio" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-				<TextField fx:id="cmpId" GridPane.columnIndex="1" />
-				<TextField fx:id="cmpPersona" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+				<TextField fx:id="cmpId" editable="false" GridPane.columnIndex="1" />
+				<TextField fx:id="cmpPersona" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 				<TextField fx:id="cmpValor" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 				<TextField fx:id="cmpNumeroCuotas" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <ComboBox fx:id="cmpTipo" prefHeight="25.0" prefWidth="244.0" promptText="&lt;Seleccione&gt;" GridPane.columnIndex="1" GridPane.rowIndex="5" />
