--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_cliente.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_cliente.fxml
@@ -87,7 +87,7 @@
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Button>
-                  <Button layoutX="115.0" layoutY="338.0" mnemonicParsing="false" onAction="#crearPrestamo" text="Prestar">
+                  <Button layoutX="119.0" layoutY="359.0" mnemonicParsing="false" onAction="#crearPrestamo" text="Prestar" AnchorPane.bottomAnchor="14.0">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
