--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_empleado.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_empleado.fxml
@@ -28,7 +28,7 @@
 						</TableView>
 					</children>
 				</AnchorPane>
-				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="428.0" prefWidth="417.0">
+				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="430.0" prefWidth="417.0">
 					<children>
 						<Label layoutX="7.0" layoutY="14.0" text="Detalle Empleado" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
 							<font>
@@ -81,9 +81,22 @@
                         <Label fx:id="txtSalario" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="11" />
 							</children>
 						</GridPane>
-						<Button layoutX="350.0" layoutY="357.0" mnemonicParsing="false" onAction="#editarEmpleado" text="Editar" AnchorPane.bottomAnchor="16.0" />
-						<Button layoutX="272.0" layoutY="357.0" mnemonicParsing="false" onAction="#elimiarEmpleado" text="Eliminar" AnchorPane.bottomAnchor="16.0" />
-						<Button layoutX="193.0" layoutY="357.0" mnemonicParsing="false" onAction="#agregarEmpleado" text="Agregar" AnchorPane.bottomAnchor="16.0" />
+						<Button layoutX="350.0" layoutY="357.0" mnemonicParsing="false" onAction="#editarEmpleado" text="Editar" AnchorPane.bottomAnchor="16.0">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
+						<Button layoutX="272.0" layoutY="357.0" mnemonicParsing="false" onAction="#elimiarEmpleado" text="Eliminar" AnchorPane.bottomAnchor="16.0">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
+						<Button layoutX="193.0" layoutY="357.0" mnemonicParsing="false" onAction="#agregarEmpleado" text="Agregar" AnchorPane.bottomAnchor="16.0">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
+                  <Button layoutX="123.0" layoutY="340.0" mnemonicParsing="false" onAction="#crearPrestamo" text="Prestar" AnchorPane.bottomAnchor="16.0">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
 					</children>
 				</AnchorPane>
 			</items>
