--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_prestamo.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_prestamo.fxml
@@ -69,9 +69,16 @@
                         <Label fx:id="txtNombrePersona" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="7" />
 							</children>
 						</GridPane>
-						<Button layoutX="350.0" layoutY="357.0" mnemonicParsing="false"  text="Editar" AnchorPane.bottomAnchor="14.0" />
-						<Button layoutX="272.0" layoutY="357.0" mnemonicParsing="false" text="Eliminar" AnchorPane.bottomAnchor="14.0" />
-						<Button layoutX="193.0" layoutY="357.0" mnemonicParsing="false" text="Agregar" AnchorPane.bottomAnchor="14.0" />
+                  <Button layoutX="267.0" layoutY="343.0" mnemonicParsing="false" onAction="#eliminarPrestamo" text="Eliminar" AnchorPane.bottomAnchor="30.0">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="351.0" layoutY="343.0" mnemonicParsing="false" onAction="#editarPrestamo" text="Editar" AnchorPane.bottomAnchor="30.0">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
 					</children>
 				</AnchorPane>
 			</items>
