--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_cliente.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_cliente.fxml
@@ -92,6 +92,11 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
+                  <Button layoutX="33.0" layoutY="359.0" mnemonicParsing="false" onAction="#agregarBienRaiz" text="Bien Raiz" AnchorPane.bottomAnchor="14.0">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
 					</children>
 				</AnchorPane>
 			</items>
