--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/inicio.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/inicio.fxml
@@ -21,6 +21,11 @@
 						<MenuItem mnemonicParsing="false" onAction="#cargarListarPrestamos" text="Lista Prestamos" />
 					</items>
 				</Menu>
+            <Menu mnemonicParsing="false" text="Bien Raiz">
+              <items>
+                <MenuItem mnemonicParsing="false" onAction="#cargarListarBienRaiz" text="Lista Bien Raiz" />
+              </items>
+            </Menu>
 				<Menu mnemonicParsing="false" text="Help">
 					<items>
 						<MenuItem mnemonicParsing="false" text="About" />
