--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_bienraiz.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_bienraiz.fxml
@@ -57,7 +57,7 @@
                         <Label fx:id="txtDireccion" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 							</children>
 						</GridPane>
-                  <Button layoutX="267.0" layoutY="343.0" mnemonicParsing="false" text="Eliminar" AnchorPane.bottomAnchor="30.0">
+                  <Button layoutX="267.0" layoutY="343.0" mnemonicParsing="false" onAction="#eliminarBienRaiz" text="Eliminar" AnchorPane.bottomAnchor="30.0">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
