--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_bienraiz.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_bienraiz.fxml
@@ -62,7 +62,7 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button layoutX="351.0" layoutY="343.0" mnemonicParsing="false" text="Editar" AnchorPane.bottomAnchor="30.0">
+                  <Button layoutX="351.0" layoutY="343.0" mnemonicParsing="false" onAction="#editarBienRaiz" text="Editar" AnchorPane.bottomAnchor="30.0">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
