--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_prestamo.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_prestamo.fxml
@@ -79,6 +79,11 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
+                  <Button layoutX="163.0" layoutY="343.0" mnemonicParsing="false" onAction="#agregarPago" text="Pagar Cuota" AnchorPane.bottomAnchor="30.0">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
 					</children>
 				</AnchorPane>
 			</items>
