--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/inicio.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/inicio.fxml
@@ -26,9 +26,14 @@
                 <MenuItem mnemonicParsing="false" onAction="#cargarListarBienRaiz" text="Lista Bien Raiz" />
               </items>
             </Menu>
-				<Menu mnemonicParsing="false" text="Help">
+            <Menu mnemonicParsing="false" text="Pagos">
+              <items>
+                <MenuItem mnemonicParsing="false" onAction="#cargarListarPagos" text="Lista Pagos" />
+              </items>
+            </Menu>
+				<Menu mnemonicParsing="false" text="Ayuda">
 					<items>
-						<MenuItem mnemonicParsing="false" text="About" />
+						<MenuItem mnemonicParsing="false" onAction="#acercade" text="Acerca de te lo prestamos" />
 					</items>
 				</Menu>
 			</menus>
