--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_prestamo.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/detalle_prestamo.fxml
@@ -30,7 +30,7 @@
 				</AnchorPane>
 				<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
 					<children>
-						<Label layoutX="7.0" layoutY="14.0" text="Detalle Prestamo" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
+						<Label fx:id="cmpInfoEncabezado" layoutX="7.0" layoutY="14.0" text="Detalle Prestamo" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
 							<font>
 								<Font name="Arial Bold" size="13.0" />
 							</font>
