--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/login.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/login.fxml
@@ -1,48 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="193.0" prefWidth="427.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectofenix.escritorio.controlador.LoginControlador">
-	<children>
-		<GridPane layoutX="5.0" layoutY="20.0" prefHeight="88.0" prefWidth="417.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="20.0">
-			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="180.0" minWidth="10.0" prefWidth="124.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="246.0" minWidth="10.0" prefWidth="246.0" />
-			</columnConstraints>
-			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-			</rowConstraints>
-			<children>
-				<Label text="Usuario:">
+<BorderPane prefHeight="175.0" prefWidth="363.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectofenix.escritorio.controlador.LoginControlador">
+   <center>
+      <GridPane prefHeight="114.0" prefWidth="323.0" BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="181.0" minWidth="10.0" prefWidth="123.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="285.0" minWidth="10.0" prefWidth="248.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Usuario:">
                <font>
                   <Font name="System Bold" size="12.0" />
-               </font></Label>
-				<Label text="Contraseña:" GridPane.rowIndex="1">
+               </font>
+            </Label>
+            <Label text="Contraseña:" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold" size="12.0" />
-               </font></Label>
-				<TextField fx:id="cmpUsuario" editable="false" GridPane.columnIndex="1" />
+               </font>
+            </Label>
             <PasswordField fx:id="cmpContrasenia" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-			</children>
-		</GridPane>
-		<Button fx:id="btnAceptar" layoutX="263.0" layoutY="141.0" mnemonicParsing="false" onAction="#ingresar" text="Aceptar" AnchorPane.rightAnchor="103.0">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font></Button>
-		<Button layoutX="348.0" layoutY="141.0" mnemonicParsing="false" onAction="#cerrarAplicacion" text="Cancelar" AnchorPane.rightAnchor="14.0">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font></Button>
-      <Hyperlink fx:id="cmpOlvideContrasenia" layoutX="176.0" layoutY="108.0" text="Olvidé contraseña" />
-	</children>
-</AnchorPane>
+            <TextField fx:id="cmpUsuario" onKeyTyped="#validarSoloNumeros" GridPane.columnIndex="1" />
+            <Hyperlink fx:id="cmpOlvideContrasenia" onAction="#olvideContrasenia" text="Olvidé contraseña" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+         </children>
+         <BorderPane.margin>
+            <Insets left="20.0" right="20.0" />
+         </BorderPane.margin>
+      </GridPane>
+   </center>
+   <bottom>
+      <AnchorPane prefHeight="54.0" prefWidth="317.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button layoutX="175.0" layoutY="16.0" mnemonicParsing="false" onAction="#ingresar" text="Aceptar">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+            <Button layoutX="313.0" layoutY="16.0" mnemonicParsing="false" onAction="#cerrarAplicacion" text="Cancelar" AnchorPane.rightAnchor="20.0">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+   </bottom>
+</BorderPane>
