--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/editar_cliente.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/editar_cliente.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="280.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectofenix.escritorio.controlador.EdicionClienteControlador">
+<AnchorPane prefHeight="280.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="proyectofenix.escritorio.controlador.EdicionClienteControlador">
 	<children>
 		<GridPane layoutX="14.0" layoutY="24.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="35.0">
 			<columnConstraints>
@@ -33,7 +33,7 @@
 				<Label text="Clave:" GridPane.rowIndex="4" />
 				<Label text="Fecha Nacimiento:" GridPane.rowIndex="5" />
 				<DatePicker fx:id="cmpFechaNacimiento" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-				<TextField fx:id="cmpCedula" GridPane.columnIndex="1" />
+				<TextField fx:id="cmpCedula" onKeyTyped="#validarSoloNumeros" GridPane.columnIndex="1" />
 				<TextField fx:id="cmpNombre" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 				<TextField fx:id="cmpApellido" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 				<TextField fx:id="cmpEmail" GridPane.columnIndex="1" GridPane.rowIndex="3" />
@@ -45,7 +45,7 @@
 				<Font name="Arial Bold" size="14.0" />
 			</font>
 		</Label>
-		<Button layoutX="197.0" layoutY="239.0" mnemonicParsing="false" onAction="#registrarPersona" text="Aceptar" AnchorPane.rightAnchor="110.0" />
+		<Button layoutX="197.0" layoutY="239.0" mnemonicParsing="false" onAction="#registrarCliente" text="Aceptar" AnchorPane.rightAnchor="110.0" />
 		<Button layoutX="280.0" layoutY="239.0" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" AnchorPane.rightAnchor="20.0" />
 	</children>
 </AnchorPane>
