--- a/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/crear_editar_pago.fxml
+++ b/escritorio-fenix/src/main/java/proyectofenix/escritorio/vista/crear_editar_pago.fxml
@@ -47,7 +47,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <Button fx:id="btnEditar" layoutX="274.0" layoutY="432.0" mnemonicParsing="false" text="Editar">
+      <Button fx:id="btnEditar" layoutX="274.0" layoutY="432.0" mnemonicParsing="false" onAction="#editarPago" text="Editar">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
